# soem_advr

./: CMakeLists.txt
cmake/: FindXenomai.cmake
ecat_iface/: ec_iface_firm_update.cpp  ec_iface_foe_test.cpp  ec_iface_test.cpp  ec_master_iface.cpp  ec_master_iface.h  ec_slave.cpp  ec_slave.h  ec_slave_type.h  slave_wrapper.cpp  utils.h  xeno_bigman.cpp  xeno_test.cpp
include/iit/ecat/: ec_master_iface.h  ec_slave_type.h  slave_wrapper.h  utils.h
include/iit/io/ecat/: ec_master_iface.h  ec_slave.h  slave_wrapper.h
include/soem-1.3.0/: ethercatmain.h  ethercattype.h
script/: ec_xeno3.sh  rtnet  rtnet.conf
src/: ethercatconfig.c  ethercatfoe.c  ethercatmain.c  nicdrv.c  osal.c
test/: aliastool.c  eepromtool.c  firm_update.c  red_test.c  simple_test.c  slaveinfo.c
